
MINOR:
  * spectrogram(), analyze(): a new argument "extraContour" for plotting something over the spectrogram
  * analyze(): spectral slope (specSlope) is returned in dB/kHz
  * analyze() calls ssm() and returns a novelty contour (a new argument "novelty")
  * analyze(): SPL_measured and Pref moved to a new argument "loudness = list(SPL_measured, Pref, SpreadSpectrum)"
  * pitch_app(), formant_app(): user zoom settings preserved when moving between audio files in queue
  * soundgen(): pitch anchors can contain NAs, eg "pitch = c(150, 200, NA, 110)" - the 3rd quarter will be unvoiced
  * addFormants(): new argument "zFun" for arbitrary transformations of the spectrogram between STFT and iSTFT (eg for de-noising, spectral warping, etc.)
  * flatEnv() AKA compressor(): a new argument "compression" regulates the amount of compression
  * ssm(): a new argument "sparse" for quickly extracting just the novelty contour from long sounds, changes in default settings, input "audiogram" renamed to "melspec", etc.

BUGS FIXED:
  * formant_app(): fixed occasional crashing when scrolling with left/right buttons, other small-scale debugging
  * soundgen(): fixed a problem with occasionally cutting off sounds with sharp attack, which made them end with audible clicks


          CHANGES IN SOUNDGEN VERSION 1.8.2 [17-October-2020]
NEW FUNCTIONS:
  * addAM(): adds amplitude modulation to a sound

MINOR:
  * soundgen(): new argument "amType" for sinusoidal or logistic amplitude modulation
  * soundgen(): "addSilence" can be of length 2 to add different amounts of silence before/after the synthesized sound
  * pitch_app(): the "voice" button forces selection to be treated as voiced if any candidates are available (before its function was merely to undo "unvoice")
  * pitch_app(): faster updates when adding/removing anchors (path updated only for current syllable) and when setting a new prior (analyze() is not re-run)