@@ -1,4 +1,4 @@
-# TODO: check functions addAM (input type, saveAudio), addFormants (input type); analyze - move SPL_measured and Pref into loudness = list(), interpolWin, interpolTol, interpolCert becomes interpol = list(); compressor, getRMS - add savePlots; flatSpectrum - update, input type etc; modulationSpetrum - update description; check optimizePars; playme - accept Wave; reverb - add saveAudio, maybe always return detailed list; schwa value - format as in analyze (bullets); transplantEnv, transplantFormants - check input type;
+# TODO: check functions addAM (input type, saveAudio), addFormants (input type); compressor, getRMS - add savePlots; flatSpectrum - update, input type etc; modulationSpetrum - update description; check optimizePars; playme - accept Wave; reverb - add saveAudio, maybe always return detailed list; schwa value - format as in analyze (bullets); transplantEnv, transplantFormants - check input type;
 
 # TODO maybe: only calculate half the ssm to save time (a bit tricky b/c it's not symmetric along the main diag but at 90°); add mel/bark to spectrogram(yScale); inverse distance weighting interpolation instead of interpolMatrix; sharpness in getLoudness(see Fastl p. 242); Viterbi algorithm for pathfinding; check loudness estimation (try to find standard values to compare); adaptive priors for pitch tracking - use first pass to update the prior per sound, then redo pathfinding; pitch tracker based on coincidence of subharmonics of strong spectral peaks (see Fastl & Zwicker p. 124), maybe also refine cepstrum to look for freq windows with a strong cepstral peak, like opera singing over the orchestra; morph multiple sounds not just 2; maybe vectorize lipRad/noseRad; some smart rbind_fill in all ...Folder functions() in case of missing columns; soundgen- use psola when synthesizing 1 gc at a time; gaussian wn implemented in seewave (check updates!); soundgen - pitch2 for dual source (desynchronized vocal folds); AM aspiration noise (not really needed, except maybe for glottis > 0); morph() - tempEffects; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?)
 
